--- a/kmbmpdc/Controls.xib
+++ b/kmbmpdc/Controls.xib
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11542" systemVersion="16A323" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="10117"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11542"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="Controls" customModule="kmbmpdc" customModuleProvider="target">
@@ -122,6 +123,12 @@
                     </connections>
                 </menuItem>
                 <menuItem isSeparatorItem="YES" id="MVg-MX-McM"/>
+                <menuItem title="Preferences" id="eXH-Me-Z2x">
+                    <modifierMask key="keyEquivalentModifierMask"/>
+                    <connections>
+                        <action selector="openPreferences:" target="-2" id="dtZ-aI-PvU"/>
+                    </connections>
+                </menuItem>
                 <menuItem title="Connect" id="Lny-il-K6D">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <connections>
