Add server password option and check permissions
MPDController now checks that it has read and control permissions on the
server before executing any of the other connection initialization
commands to prevent crashing on connect. Server password option has also
been included in the preferences window.

Resolves: #3

--- a/kmbmpdc/Preferences.xib
+++ b/kmbmpdc/Preferences.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11542" systemVersion="16A323" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11762" systemVersion="16A323" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11542"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11762"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -11,6 +11,7 @@
                 <outlet property="hostField" destination="W8n-sp-fAc" id="8pJ-wo-ojm"/>
                 <outlet property="musicDirectoryPath" destination="3ub-IT-Dn4" id="lq2-9Z-Dua"/>
                 <outlet property="notificationEnableButton" destination="7mU-hD-zJv" id="vGj-PY-YEi"/>
+                <outlet property="passwordField" destination="ovY-hW-j95" id="R7O-Ww-NRp"/>
                 <outlet property="portField" destination="F79-K5-ANv" id="Fm9-ew-UnW"/>
                 <outlet property="view" destination="Hz6-mo-xeY" id="0bl-1N-x8E"/>
             </connections>
@@ -18,14 +19,11 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="420" height="153"/>
+            <rect key="frame" x="0.0" y="0.0" width="420" height="182"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="W8n-sp-fAc">
-                    <rect key="frame" x="59" y="111" width="225" height="22"/>
-                    <constraints>
-                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="211" id="5ke-Os-Xzp"/>
-                    </constraints>
+                    <rect key="frame" x="89" y="140" width="195" height="22"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" placeholderString="127.0.0.1" drawsBackground="YES" id="WbY-Wg-Xcd">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
@@ -36,7 +34,7 @@
                     </connections>
                 </textField>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Bpt-zo-nf6">
-                    <rect key="frame" x="18" y="114" width="33" height="17"/>
+                    <rect key="frame" x="18" y="143" width="33" height="17"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Host" id="7rw-2D-G3R">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -44,7 +42,7 @@
                     </textFieldCell>
                 </textField>
                 <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="F79-K5-ANv">
-                    <rect key="frame" x="335" y="111" width="65" height="22"/>
+                    <rect key="frame" x="335" y="140" width="65" height="22"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="65" id="1ul-ax-B8L"/>
                     </constraints>
@@ -58,7 +56,7 @@
                     </connections>
                 </textField>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="lVM-Uj-zae">
-                    <rect key="frame" x="297" y="114" width="30" height="17"/>
+                    <rect key="frame" x="297" y="143" width="30" height="17"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Port" id="6Zg-yc-Z18">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -66,17 +64,14 @@
                     </textFieldCell>
                 </textField>
                 <pathControl verticalHuggingPriority="750" allowsExpansionToolTips="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3ub-IT-Dn4">
-                    <rect key="frame" x="20" y="49" width="300" height="22"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="300" id="Inu-Ws-3e8"/>
-                    </constraints>
+                    <rect key="frame" x="20" y="54" width="300" height="22"/>
                     <pathCell key="cell" lineBreakMode="truncatingMiddle" selectable="YES" alignment="left" placeholderString="" id="nHP-e5-Xp0">
                         <font key="font" metaFont="system"/>
                         <url key="url" string="file:///Users/"/>
                     </pathCell>
                 </pathControl>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="H3J-Uz-pYg">
-                    <rect key="frame" x="18" y="79" width="98" height="17"/>
+                    <rect key="frame" x="18" y="80" width="98" height="17"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Music directory" id="B3I-nz-61Q">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -84,9 +79,9 @@
                     </textFieldCell>
                 </textField>
                 <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="s9h-0W-kCn">
-                    <rect key="frame" x="319" y="43" width="87" height="32"/>
+                    <rect key="frame" x="319" y="47" width="87" height="32"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="75" id="g9E-jw-FRD"/>
+                        <constraint firstAttribute="width" constant="75" id="0mI-ls-Kuy"/>
                     </constraints>
                     <buttonCell key="cell" type="push" title="Change" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="FuL-4r-Oyu">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -96,6 +91,28 @@
                         <action selector="openMusicDirectorySelector:" target="-2" id="LgL-Yy-wF8"/>
                     </connections>
                 </button>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="vuH-Bo-7MQ">
+                    <rect key="frame" x="18" y="110" width="63" height="17"/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Password" id="BV3-Fb-dRk">
+                        <font key="font" metaFont="system"/>
+                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
+                <secureTextField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ovY-hW-j95">
+                    <rect key="frame" x="89" y="105" width="311" height="22"/>
+                    <secureTextFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" placeholderString="" drawsBackground="YES" usesSingleLineMode="YES" id="stS-PY-5qk">
+                        <font key="font" metaFont="system"/>
+                        <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                        <allowedInputSourceLocales>
+                            <string>NSAllRomanInputSourcesLocaleIdentifier</string>
+                        </allowedInputSourceLocales>
+                    </secureTextFieldCell>
+                    <connections>
+                        <action selector="changedPassword:" target="-2" id="See-Nh-t6f"/>
+                    </connections>
+                </secureTextField>
                 <button translatesAutoresizingMaskIntoConstraints="NO" id="7mU-hD-zJv">
                     <rect key="frame" x="18" y="18" width="384" height="18"/>
                     <buttonCell key="cell" type="check" title="Notifications enabled" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="9BK-dt-2Hm">
@@ -109,27 +126,31 @@
             </subviews>
             <constraints>
                 <constraint firstItem="Bpt-zo-nf6" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="1Tk-Eb-O0d"/>
-                <constraint firstItem="lVM-Uj-zae" firstAttribute="leading" secondItem="W8n-sp-fAc" secondAttribute="trailing" constant="15" id="3r4-3P-esL"/>
-                <constraint firstItem="3ub-IT-Dn4" firstAttribute="top" secondItem="H3J-Uz-pYg" secondAttribute="bottom" constant="8" id="5s5-Y8-wuS"/>
+                <constraint firstItem="H3J-Uz-pYg" firstAttribute="top" secondItem="ovY-hW-j95" secondAttribute="bottom" constant="8" id="2hF-2a-8vq"/>
+                <constraint firstItem="s9h-0W-kCn" firstAttribute="leading" secondItem="3ub-IT-Dn4" secondAttribute="trailing" constant="5" id="3M4-uE-fva"/>
+                <constraint firstAttribute="trailing" secondItem="7mU-hD-zJv" secondAttribute="trailing" constant="20" id="7YL-kn-JTn"/>
+                <constraint firstItem="7mU-hD-zJv" firstAttribute="top" secondItem="s9h-0W-kCn" secondAttribute="bottom" constant="20" id="BQB-rE-SXD"/>
+                <constraint firstItem="3ub-IT-Dn4" firstAttribute="top" secondItem="H3J-Uz-pYg" secondAttribute="bottom" constant="4" id="CUx-9o-QRZ"/>
+                <constraint firstItem="ovY-hW-j95" firstAttribute="top" secondItem="F79-K5-ANv" secondAttribute="bottom" constant="13" id="FuM-45-28x"/>
                 <constraint firstItem="F79-K5-ANv" firstAttribute="leading" secondItem="lVM-Uj-zae" secondAttribute="trailing" constant="10" id="GSh-FB-IN5"/>
-                <constraint firstItem="W8n-sp-fAc" firstAttribute="leading" secondItem="Bpt-zo-nf6" secondAttribute="trailing" constant="10" id="Jlh-BD-QTE"/>
-                <constraint firstAttribute="trailing" secondItem="7mU-hD-zJv" secondAttribute="trailing" constant="20" id="SXF-FX-fAC"/>
+                <constraint firstItem="vuH-Bo-7MQ" firstAttribute="top" secondItem="Bpt-zo-nf6" secondAttribute="bottom" constant="16" id="MdM-J6-e7y"/>
+                <constraint firstItem="lVM-Uj-zae" firstAttribute="leading" secondItem="W8n-sp-fAc" secondAttribute="trailing" constant="15" id="QKB-6h-U8p"/>
                 <constraint firstItem="Bpt-zo-nf6" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" constant="22" id="TuV-L5-G05"/>
-                <constraint firstItem="7mU-hD-zJv" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="Vg1-31-8Uy"/>
-                <constraint firstItem="W8n-sp-fAc" firstAttribute="baseline" secondItem="Bpt-zo-nf6" secondAttribute="baseline" id="bvQ-tg-Qm7"/>
-                <constraint firstItem="H3J-Uz-pYg" firstAttribute="top" secondItem="W8n-sp-fAc" secondAttribute="bottom" constant="15" id="flO-w7-GxU"/>
+                <constraint firstItem="7mU-hD-zJv" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="W8N-cz-Iy9"/>
+                <constraint firstAttribute="trailing" secondItem="s9h-0W-kCn" secondAttribute="trailing" constant="20" id="XWa-1n-7DJ"/>
+                <constraint firstItem="ovY-hW-j95" firstAttribute="leading" secondItem="vuH-Bo-7MQ" secondAttribute="trailing" constant="10" id="Z24-eW-atY"/>
+                <constraint firstItem="H3J-Uz-pYg" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="a9C-p8-KK7"/>
                 <constraint firstItem="lVM-Uj-zae" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" constant="22" id="g5n-m0-1e9"/>
-                <constraint firstItem="3ub-IT-Dn4" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="gEI-im-hY1"/>
-                <constraint firstItem="7mU-hD-zJv" firstAttribute="top" secondItem="3ub-IT-Dn4" secondAttribute="bottom" constant="15" id="lMz-Uv-MrV"/>
-                <constraint firstItem="s9h-0W-kCn" firstAttribute="top" secondItem="F79-K5-ANv" secondAttribute="bottom" constant="40" id="lxA-U3-FDD"/>
-                <constraint firstAttribute="trailing" secondItem="s9h-0W-kCn" secondAttribute="trailing" constant="20" id="scn-hg-yNg"/>
-                <constraint firstItem="H3J-Uz-pYg" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="tUa-2d-PuG"/>
+                <constraint firstAttribute="trailing" secondItem="ovY-hW-j95" secondAttribute="trailing" constant="20" id="iH2-VV-KTp"/>
+                <constraint firstItem="W8n-sp-fAc" firstAttribute="leading" secondItem="Bpt-zo-nf6" secondAttribute="trailing" constant="40" id="raT-x9-nOh"/>
+                <constraint firstItem="W8n-sp-fAc" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" constant="20" id="tQ2-tR-6Cc"/>
+                <constraint firstItem="s9h-0W-kCn" firstAttribute="top" secondItem="ovY-hW-j95" secondAttribute="bottom" constant="30" id="uYN-Yn-PVQ"/>
                 <constraint firstItem="F79-K5-ANv" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" constant="20" id="uro-dI-D9G"/>
+                <constraint firstItem="3ub-IT-Dn4" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="wZc-zu-bZc"/>
                 <constraint firstAttribute="trailing" secondItem="F79-K5-ANv" secondAttribute="trailing" constant="20" id="wso-o8-Y7g"/>
-                <constraint firstItem="s9h-0W-kCn" firstAttribute="leading" secondItem="3ub-IT-Dn4" secondAttribute="trailing" constant="5" id="yeP-2B-Y6p"/>
-                <constraint firstAttribute="bottom" secondItem="7mU-hD-zJv" secondAttribute="bottom" constant="20" id="zzs-JA-vtL"/>
+                <constraint firstItem="vuH-Bo-7MQ" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="zue-1E-BHv"/>
             </constraints>
-            <point key="canvasLocation" x="102" y="109.5"/>
+            <point key="canvasLocation" x="102" y="124"/>
         </customView>
     </objects>
 </document>
