Fit cover art vertically in controller
Cover art view is now resized vertically so that it fits the cover art
aspect ratio, with a minimum height of 89 points and a maximum height of
600 points.

Cover art images are also scaled with the highest quality interpolation.
This is especially helpful for large scanned cover art, which can look
atrocious when directly displayed in the controller.

--- a/kmbmpdc/Controller.xib
+++ b/kmbmpdc/Controller.xib
@@ -13,6 +13,7 @@
                 <outlet property="consumeModeButton" destination="hhj-12-CRk" id="clH-V7-du5"/>
                 <outlet property="currentTrackArtist" destination="aPe-0s-wWo" id="IH6-kd-Q3T"/>
                 <outlet property="currentTrackCover" destination="S1u-LG-S6N" id="cuJ-WX-oxE"/>
+                <outlet property="currentTrackCoverHeight" destination="qVI-wz-i8f" id="qM5-3d-lFK"/>
                 <outlet property="currentTrackTitle" destination="n0X-Ap-HND" id="Uwa-2t-ihD"/>
                 <outlet property="nextButton" destination="Z4Q-Oi-6Ww" id="TIS-HU-mNg"/>
                 <outlet property="playPauseButton" destination="Lbs-TV-Qr3" id="Zdw-X2-K0z"/>
